Bugfix: Meme download was cropped wrongly

--- a/src/Styles/Generator.css
+++ b/src/Styles/Generator.css
@@ -18,11 +18,19 @@
   height: 30rem;
 }
 
+.memeDownload {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: 30rem;
+}
+
 .memeText {
   font-family: impact;
   font-size: 30px;
   max-height: 30px;
-  width: 200px;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
   -webkit-text-fill-color: white;
@@ -46,13 +54,8 @@
   cursor: pointer;
 }
 
-#textBottom {
-  top: 80px;
-}
-
 #memePic {
   pointer-events: none;
-  margin: auto;
   max-width: 100%;
   max-height: 100%;
 }
